--- a/link/link.htm
+++ b/link/link.htm
@@ -1,5 +1,5 @@
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>登陆器公告</title>
 <style type="text/css">
 <!--
