--- a/link/link.htm
+++ b/link/link.htm
@@ -119,7 +119,7 @@ body,td,th {
       <table width="320" height="128" border="0" cellpadding="0" cellspacing="0">
         <tr>
           <th width="10" scope="col">&nbsp;</th>
-          <th width="300" height="127" bgcolor="#000000" scope="col"><a href="http://www.tcdjgame.com/" target="_blank"><img src="Images/01.jpg" width="300" height="127" border="0"></a></th>
+          <th width="300" height="127" bgcolor="#000000" scope="col"><a href="http://www.tcdjgame.com/" target="_blank"><img src="images/01.jpg" width="300" height="127" border="0"></a></th>
           <th width="10" scope="col">&nbsp;</th>
         </tr>
       </table></th>
@@ -127,7 +127,7 @@ body,td,th {
 </table>
 <table width="320" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <th height="72" scope="col"><a href="http://www.tcdjgame.com/" target="_blank"><img src="Images/Link_04.jpg" name="元宝充值" width="320" height="72" border="0"></a></th>
+    <th height="72" scope="col"><a href="http://www.tcdjgame.com/" target="_blank"><img src="images/Link_04.jpg" name="元宝充值" width="320" height="72" border="0"></a></th>
   </tr>
 </table>
 </body>
