--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@ if($("#toplist li").length > 4){
     </div>
     <div class="game_btn">
 
-        <a target="_blank" href="https://share.weiyun.com/59FYAxl" title="补丁下载"></a>
+        <a target="_blank" href="https://share.weiyun.com/51QRybX" title="补丁下载"></a>
         <a class="item2" href="pay.html" tppabs="http://www.tcdjgame.com/pay.html" title="游戏充值" target="_blank"></a>
 
         <div class="clear"></div>
@@ -84,8 +84,8 @@ if($("#toplist li").length > 4){
 
         <div class="login">
 			<ul>
-				<li class="link_item1"><a target="_blank" href="https://share.weiyun.com/59FYAxl">客户端下载</a>客户端本地下载</a></li>
-				<li class="link_item2"><a target="_blank" href="https://share.weiyun.com/59FYAxl" target="_blank">补丁下载</a>补丁网盘下载</a></li>
+				<li class="link_item1"><a target="_blank" href="https://share.weiyun.com/51QRybX">客户端下载</a>客户端本地下载</a></li>
+				<li class="link_item2"><a target="_blank" href="https://share.weiyun.com/51QRybX" target="_blank">补丁下载</a>补丁网盘下载</a></li>
 				<li class="link_item3"><a target="_blank" href="jcxf.htm" tppabs="http://www.tcdjgame.com/jcxf.htm">进不去游戏</a></li>
 				<li class="link_item4"><a target="_blank" href="jcxf.htm" tppabs="http://www.tcdjgame.com/jcxf.htm">请点击查看</a></li>
 			</ul>
@@ -97,9 +97,9 @@ if($("#toplist li").length > 4){
     <div class="banner fl">
         <div class="focus-box" id="focus-box">
             <ul>
-                                    <li><a href="https://share.weiyun.com/59FYAxl" title="天长地久传奇下载" ><img alt="" src="image/banner1.jpg" tppabs="http://www.tcdjgame.com/images/banner1.jpg"  width="590" height="320" /></a></li>
-                                    <li><a href="https://share.weiyun.com/59FYAxl" title="我本沉默传奇下载" ><img alt="" src="image/banner2.jpg" tppabs="http://www.tcdjgame.com/images/banner2.jpg"  width="590" height="320" /></a></li>
-                                    <li><a href="https://share.weiyun.com/59FYAxl" title="天长地久传奇下载" ><img alt="" src="image/banner3.jpg" tppabs="http://www.tcdjgame.com/images/banner3.jpg"  width="590" height="320" /></a></li>
+                                    <li><a href="https://share.weiyun.com/51QRybX" title="天长地久传奇下载" ><img alt="" src="image/banner1.jpg" tppabs="http://www.tcdjgame.com/images/banner1.jpg"  width="590" height="320" /></a></li>
+                                    <li><a href="https://share.weiyun.com/51QRybX" title="我本沉默传奇下载" ><img alt="" src="image/banner2.jpg" tppabs="http://www.tcdjgame.com/images/banner2.jpg"  width="590" height="320" /></a></li>
+                                    <li><a href="https://share.weiyun.com/51QRybX" title="天长地久传奇下载" ><img alt="" src="image/banner3.jpg" tppabs="http://www.tcdjgame.com/images/banner3.jpg"  width="590" height="320" /></a></li>
 
                             </ul>
             <div class="focus-btn" id="focus-btn">
